--- a/03-basic-app/index.html
+++ b/03-basic-app/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1>App Works</h1>
     <script src="./dist/bundle.js"></script>
+    <!-- <script src="secondfile.js"></script> -->
   </body>
 </html>
