--- a/03-basic-app/index.html
+++ b/03-basic-app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Boilerplate Project</title>
+    <title>JavaScript Basics</title>
   </head>
   <body>
     <h1>App Works</h1>
