--- a/03-basic-app/index.html
+++ b/03-basic-app/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <h1>App Works</h1>
+
+    <input type="text" id="txtInput" />
+
+    <button id="btn">Greet</button>
+
     <script src="./dist/bundle.js"></script>
     <!-- <script src="secondfile.js"></script> -->
   </body>
