--- a/04-advance-js/index.html
+++ b/04-advance-js/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>App Works</h1>
+    <button id="btnFetch">Fetch</button>
     <script src="./dist/bundle.js"></script>
   </body>
 </html>
